# tpfanspeed

./: Cargo.toml  README.md  dummyfile.txt
libtpfanspeed/: Cargo.toml
libtpfanspeed/src/: error.rs  lib.rs
src/: lib.rs
src/components/: fancontrol.rs  mod.rs
tpfanctl/: Cargo.toml
tpfanctl/src/: lib.rs  main.rs
tpfanspeed/: Cargo.toml
tpfanspeed/src/: lib.rs  main.rs
tpfanspeed/src/components/: fancontrol.rs  mod.rs  temperature.rs
tpfanspeed/src/components/tempbox/: imp.rs  mod.rs
tpfanspeed/src/components/temperature_widget/: imp.rs  mod.rs
tpfanspeed/src/components/tempframe/: imp.rs  mod.rs
