[package]
name = "libtpfanspeed"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A ThinkPad fan control library."
homepage = "https://github.com/ezntek/tpfanspeed"
repository = "https://github.com/ezntek/tpfanspeed"
readme = "../README.md"


[dependencies]
serde = {version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
