[package]
name = "tpfanctl"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A nicer ThinkPad fan control app, written in Rust."
homepage = "https://github.com/ezntek/tpfanspeed"
repository = "https://github.com/ezntek/tpfanspeed"
readme = "README.md"


[dependencies]
color-eyre = "0.6.3"
colored = "2.1.0"
libtpfanspeed = { path = "../libtpfanspeed" }
clap = { version = "4.5.9", features = ["derive"]}
