[package]
name = "tpfanctl"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "A nicer ThinkPad fan control app, written in Rust."
homepage = "https://github.com/ezntek/tpfanspeed"
repository = "https://github.com/ezntek/tpfanspeed"
readme = "../README.md"


[dependencies]
color-eyre = "0.6.3"
libtpfanspeed = { path = "../libtpfanspeed" }
clap = { version = "4.5.9", features = ["derive"]}
ctrlc = "3.4.5"
crossterm = "0.28.1"
